Fixing layout issue on #now Fixes #524

--- a/site/assets/scss/fragments/_miniatures-all.scss
+++ b/site/assets/scss/fragments/_miniatures-all.scss
@@ -111,8 +111,8 @@
   }
 }
 
-/* IF IMAGE-PRE -------------------------------------------------------------------------------------------------------------- 
- ----------------------------------------------------------------------------------------------------------------------------- 
+/* IF IMAGE-PRE --------------------------------------------------------------------------------------------------------------
+ -----------------------------------------------------------------------------------------------------------------------------
   -----------------------------------------------------------------------------------------------------------------------------*/
 
 $width-image-pre-highlight: (100% / 75) * 6;
@@ -167,12 +167,12 @@ $width-image-pre-highlight: (100% / 75) * 6;
     }
   }
 
-  .page-home #now {
-    .bandeau,
-    hgroup {
-      width: 100%;
-    }
-  }
+  // .page-home #now {
+  //   .bandeau,
+  //   hgroup {
+  //     width: 100%;
+  //   }
+  // }
 
   .page-people #highlights #highlights-list-production {
     .bandeau,
